--- a/PlantLoggerApp/PlantLoggerApp.Android/PlantLoggerApp.Android.csproj
+++ b/PlantLoggerApp/PlantLoggerApp.Android/PlantLoggerApp.Android.csproj
@@ -57,6 +57,9 @@
     <PackageReference Include="MongoDB.Driver">
       <Version>2.12.0</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.LocalNotification">
+      <Version>5.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugin.Media">
       <Version>5.0.1</Version>
     </PackageReference>
