--- a/PlantLoggerApp/PlantLoggerApp/PlantLoggerApp.csproj
+++ b/PlantLoggerApp/PlantLoggerApp/PlantLoggerApp.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.12.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Plugin.LocalNotification" Version="5.2.0" />
     <PackageReference Include="Xam.Plugin.Media" Version="5.0.1" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
