--- a/PlantLoggerApp/PlantLoggerApp.Android/PlantLoggerApp.Android.csproj
+++ b/PlantLoggerApp/PlantLoggerApp.Android/PlantLoggerApp.Android.csproj
@@ -60,6 +60,9 @@
     <PackageReference Include="Plugin.LocalNotification">
       <Version>5.2.0</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.Pdf">
+      <Version>18.4.0.49</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugin.Media">
       <Version>5.0.1</Version>
     </PackageReference>
