--- a/PlantLoggerApp/PlantLoggerApp.Android/PlantLoggerApp.Android.csproj
+++ b/PlantLoggerApp/PlantLoggerApp.Android/PlantLoggerApp.Android.csproj
@@ -54,6 +54,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="ceTe.DynamicPDF.CoreSuite.NET">
+      <Version>11.8.0</Version>
+    </PackageReference>
     <PackageReference Include="MongoDB.Driver">
       <Version>2.12.0</Version>
     </PackageReference>
@@ -106,6 +109,15 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\bubz1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Small_plant.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\SmallPlant.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\randomPlant.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
