--- a/PlantLoggerApp/PlantLoggerApp/PlantLoggerApp.csproj
+++ b/PlantLoggerApp/PlantLoggerApp/PlantLoggerApp.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ceTe.DynamicPDF.CoreSuite.NET" Version="11.8.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.12.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Plugin.LocalNotification" Version="5.2.0" />
